// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches Squaw lift list correctly 1`] = `
Object {
  "lifts": Array [],
}
`;

exports[`fetches Squaw trail list correctly 1`] = `
Object {
  "trails": Array [],
}
`;
